add config gradle